--- a/src/pug/works-4.pug
+++ b/src/pug/works-4.pug
@@ -1,8 +1,10 @@
 extends _template/_base
 
 block vars
+  - titleChild = "works";
   - lev1ID = "works";
   - lev = 2;
+  - ogUrl = "https://portfolio.yutonosite.com/works-4/";
 
 block links
   link(href=`${pathToCSS}works-base.css${hash}`, rel="stylesheet", type="text/css")
