biography slide アニメーション修正

--- a/src/pug/about-me/biography.pug
+++ b/src/pug/about-me/biography.pug
@@ -66,6 +66,6 @@ section#biography.biography
                 span Lv.29
               .hr
               p 特性：好奇心旺盛<br>武器：クリエイターズツール
-              p.left 自分の将来を見つめ直し、好きなことを仕事にするためにWeb制作スキルの習得を決意。スクールではデザインとコーディングの基礎を学び、日々の努力を重ねながら新たなキャリアに向けた準備を進めている。
+              p.left 自分の将来を見つめ直し、好きなことを仕事にするためにWeb制作スキルの習得を決意した。スクールではデザインとコーディングの基礎を学び、日々の努力を重ねながら新たなキャリアに向けた準備を進めている。
             .img
               img(src=`${pathToImgAboutMe}img-biography-4.webp`, alt="現在のイラスト")
