--- a/src/pug/about-me/yuki-takatsu.pug
+++ b/src/pug/about-me/yuki-takatsu.pug
@@ -51,7 +51,7 @@ section#yuki.yuki
               span
             .acc-text
               .inner
-                p HTML(pug)、CSS(sass)、JavaScriptを用いたコーディングスキルを活かし、レスポンシブデザインや動きのあるインタラクションを実現できます。また、規則性のあるコードを心がけたり、GitやGitHubを活用してチーム開発の効率化にも対応可能です。
+                p HTML(pug)、CSS(scss)、JavaScriptを用いたコーディングスキルを活かし、レスポンシブデザインや動きのあるインタラクションを実現できます。また、規則性のあるコードを心がけたり、GitやGitHubを活用してチーム開発の効率化にも対応可能です。
           details
             summary
               figure.icon3
