--- a/src/pug/top/about-me.pug
+++ b/src/pug/top/about-me.pug
@@ -6,12 +6,7 @@ section#about-me.about-me
     .content
       figure.bg
       .name
-        .h3
-          span T
-          span akatsu
-          br
-          span Y
-          span uki
+        .h3 Takatsu<br>Yuki
         p 高津 由輝
         .icon
           a(href="https://github.com/Takatsu-yuki", target="_blank", rel="noopener noreferrer")
@@ -65,7 +60,7 @@ section#about-me.about-me
               figure.item1
               figure.item2
               figure.item3
-            p 1995年生まれの千葉県出身。<br>趣味でイラストを描いていたことをきっかけにweb制作に興味を持ち、2023年の11月からスクールでデザインとコーディングのスキルを習得しました。<br>現在、Webデザイナーとしての転職を目指し、新しいチャレンジに向けて活動中です。
+            p 1995年生まれの千葉県出身。<br>趣味でイラストを描いていたことをきっかけにweb制作に興味を持ち、2023年の11月からスクールでデザインとコーディングのスキルを習得しました。<br>現在、Web業界への転職を目指し、新しいチャレンジに向けて活動中です。
             a.btn-more(href="/about-me/")
               include ../../assets/img/svg/logo.svg
               p MORE
