--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -46,8 +46,13 @@ html(lang="ja", xmlns:og="http://ogp.me/ns#")
 
     meta(property="og:title", content="Takatsu Yuki portfolio site")
     meta(property="og:description", content="高津由輝の就職活動用のポートフォリオサイトです。")
+    meta(property="og:image", content="https://portfolio.yutonosite.com/assets/images/common/img-ogp.jpg")
+    meta(property="og:site_name", content="Takatsu Yuki portfolio site")
     meta(property="og:type", content="website")
     meta(property="og:url", content=ogUrl || "https://portfolio.yutonosite.com/")
+    meta(name="twitter:card", content="summary_large_image")
+    meta(name="twitter:image", content="https://portfolio.yutonosite.com/assets/images/common/img-ogp.jpg")
+    meta(name="twitter:title", content="Takatsu Yuki portfolio site")
     link(rel="icon", href=`${pathToCommon}icon.ico`, sizes="16x16")
     link(rel="icon", href=`${pathToCommon}icon.ico`, sizes="32x32")
     link(rel="apple-touch-icon", href=`${pathToCommon}icon.ico`, sizes="180x180")
